# ducky

./: .gitmodules  Cargo.toml  README.md  TODO.md  build.rs
doc/: infer.md  types.md
rt/: Makefile  a.out  build.rs  rt.bc  rt.c  rt.ll
src/: ast.rs  il.rs  infer.rs  intern.rs  lexer.rs  main.rs  parser.rs  parserc.rs  scope.rs  simplify.rs  specialize.rs
src/infer/: env.rs  mod.rs  test.rs  unify.rs  util.rs
