[package]

name = "ducky"
version = "0.0.1"
authors = [ "Michael Layzell <michael@thelayzells.com>" ]
repository = "https://github.com/mystor/ducky"
readme = "README.md"

build = "rt/build.rs"

[dependencies]

regex = "0.1.*"
regex_macros = "0.1.*"
lazy_static = "0.1.*"

[dependencies.rusty_llvm]

path = "../rusty_llvm"

[[bin]]

name = "duckyc"
