[package]

name = "ducky"
version = "0.0.1"
authors = [ "Michael Layzell <michael@thelayzells.com>" ]
repository = "https://github.com/mystor/ducky"
readme = "README.md"

build = "build.rs"

[dependencies]

log = "0.2.*"
env_logger = "0.2.*"
regex = "0.1.*"
regex_macros = "0.1.*"
lazy_static = "0.1.*"
bindgen = "*"

[[bin]]

name = "duckyc"
